--- a/aula14ex/ex015/ex016/modelo.html
+++ b/aula14ex/ex015/ex016/modelo.html
@@ -4,31 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programinha idade</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
  <header>
-    <h1>Detector de Idade</h1> 
+    <h1>Tabuada</h1> 
  </header>
  <section>
     <div>
-        <p>Ano de nascimento:
-            <input type="number" name="txtano" id="txtano" min="0">
-        </p>
-        <p>Sexo:
-            <input type="radio" name="radsex" id="masc" checked>
-            <label for="masc">Masculino</label>
-            <input type="radio" name="radsex" id="fem">
-            <label for="fem">Feminino</label>
-        </p>
-        <p>
-            <input type="button" value="Verificar" onclick="verificar()">
+        <p>Número:
+            <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar tabuada" onclick="tabuada()">
         </p>
     </div>
-    <div id="res">
-        Preencha os dados acima para ver o resultado!
+    <div>
+        <select name="tabuada" id="seltab" size="10">
+            <option>Digite um número acima</option>
+        </select>
     </div>
  </section>
  <script src="script.js"></script>
